Shirnkwrap dep versions and node verion for building

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "browserify": "*",
     "debug": "*",
     "eslint": "*",
-    "gulp": "",
+    "gulp": "*",
     "gulp-concat": "*",
     "gulp-debug": "*",
     "gulp-eslint": "*",
