--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simplemde",
   "version": "1.11.2",
-  "description": "A simple, beautiful, and embeddable JavaScript Markdown editor. Features autosaving and spell checking.",
+  "description": "A simple, beautiful, and embeddable JavaScript Markdown editor. Forked by Sealcode for performance and paste-from-html.",
   "keywords": [
     "embeddable",
     "markdown",
@@ -24,7 +24,7 @@
     "url": "https://github.com/sparksuite/simplemde-markdown-editor/issues"
   },
   "dependencies": {
-    "codemirror": "*",
+    "@sealcode/sealcodemirror": "^5.70.0-beta",
     "codemirror-spell-checker": "*",
     "marked": "*"
   },
