--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sealcode/simplemde",
-  "version": "1.12.0-beta7",
+  "version": "1.12.0-beta8",
   "description": "A simple, beautiful, and embeddable JavaScript Markdown editor. Forked by Sealcode for performance and paste-from-html.",
   "keywords": [
     "embeddable",
@@ -26,7 +26,8 @@
   "dependencies": {
     "@sealcode/sealcodemirror": "^5.70.0-beta3",
     "codemirror-spell-checker": "*",
-    "marked": "*"
+    "marked": "*",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "browserify": "*",
