--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sealcode/simplemde",
-  "version": "1.12.0-beta8",
+  "version": "1.12.0-beta9",
   "description": "A simple, beautiful, and embeddable JavaScript Markdown editor. Forked by Sealcode for performance and paste-from-html.",
   "keywords": [
     "embeddable",
@@ -27,7 +27,8 @@
     "@sealcode/sealcodemirror": "^5.70.0-beta3",
     "codemirror-spell-checker": "*",
     "marked": "*",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "turndown-plugin-gfm": "^1.0.2"
   },
   "devDependencies": {
     "browserify": "*",
